# tank_game

./: .gitignore  Cargo.toml  LICENSE  README.md  tank_game.sln
ai/templates/csharp/: Program.cs  README.md
ai/templates/javascript/: README.md  main.js  package.json
ai/templates/python/: README.md  main.py
ai/testing/level_1/: README.md  main.py  requirements.txt
ai/testing/level_2/: README.md  main.py
ai/testing/level_3/: README.md  main.py
ai/testing/level_4/: README.md  main.py
assets/maps/: map_1.ron  map_2.ron  map_3.ron  test_1.ron
assets/shaders/: tank.wgsl
map_builder/: convert.py
src/: args.rs  main.rs  player.rs  render.rs
src/engine/: camera.rs  game_time.rs  map.rs  mod.rs  tank.rs
src/engine/map/: gen_state.rs  map_loader.rs  mod.rs
src/engine/tank/: bullet.rs  gen.rs  instruction.rs  material.rs  mod.rs  vision.rs
src/player/: key_board.rs  mod.rs  server.rs
tests/: integration_test.rs
