[package]
name = "game"
version = "0.1.0"
edition = "2021"

[features]
debug = []
cinematic = []

[dependencies]
bevy = {version = "0.14.2", features = ["bevy_state", "bevy_sprite"]}

bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }

ron = "0.8"
serde = { version = "1", features = ["derive"] }

rand = "0.8.5"

reqwest = { version = "0.11", features = ["json", "blocking"]}

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = true

[profile.release]
debug = true